// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: CharIcon/nomal 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <MockRouter
    createHref={[Function]}
    location=""
    params={Object {}}
    path=""
    push={[Function]}
    replace={[Function]}
    url=""
  >
    <WithStyles(CharIcon)
      name="ozaki25"
      onClick={[MockFunction]}
    >
      <CharIcon
        classes={
          Object {
            "amber": "CharIcon-amber-17",
            "avatar": "CharIcon-avatar-1",
            "blue": "CharIcon-blue-9",
            "blueGrey": "CharIcon-blueGrey-22",
            "brown": "CharIcon-brown-20",
            "cyan": "CharIcon-cyan-11",
            "deepOrange": "CharIcon-deepOrange-19",
            "deepPurple": "CharIcon-deepPurple-7",
            "green": "CharIcon-green-13",
            "grey": "CharIcon-grey-21",
            "indigo": "CharIcon-indigo-8",
            "lightBlue": "CharIcon-lightBlue-10",
            "lightGreen": "CharIcon-lightGreen-14",
            "lime": "CharIcon-lime-15",
            "orange": "CharIcon-orange-18",
            "pink": "CharIcon-pink-5",
            "purple": "CharIcon-purple-6",
            "red": "CharIcon-red-4",
            "smallAvatar": "CharIcon-smallAvatar-2",
            "teal": "CharIcon-teal-12",
            "wrapper": "CharIcon-wrapper-3",
            "yellow": "CharIcon-yellow-16",
          }
        }
        name="ozaki25"
        onClick={[MockFunction]}
        small={false}
      >
        <WithStyles(IconButton)
          className="CharIcon-wrapper-3"
          disableRipple={true}
          onClick={[MockFunction]}
        >
          <IconButton
            className="CharIcon-wrapper-3"
            classes={
              Object {
                "colorInherit": "MuiIconButton-colorInherit-24",
                "colorPrimary": "MuiIconButton-colorPrimary-25",
                "colorSecondary": "MuiIconButton-colorSecondary-26",
                "disabled": "MuiIconButton-disabled-27",
                "label": "MuiIconButton-label-28",
                "root": "MuiIconButton-root-23",
              }
            }
            color="default"
            disableRipple={true}
            disabled={false}
            onClick={[MockFunction]}
          >
            <WithStyles(ButtonBase)
              centerRipple={true}
              className="MuiIconButton-root-23 CharIcon-wrapper-3"
              disableRipple={true}
              disabled={false}
              focusRipple={true}
              onClick={[MockFunction]}
            >
              <ButtonBase
                centerRipple={true}
                className="MuiIconButton-root-23 CharIcon-wrapper-3"
                classes={
                  Object {
                    "disabled": "MuiButtonBase-disabled-30",
                    "focusVisible": "MuiButtonBase-focusVisible-31",
                    "root": "MuiButtonBase-root-29",
                  }
                }
                component="button"
                disableRipple={true}
                disableTouchRipple={false}
                disabled={false}
                focusRipple={true}
                onClick={[MockFunction]}
                tabIndex="0"
                type="button"
              >
                <button
                  className="MuiButtonBase-root-29 MuiIconButton-root-23 CharIcon-wrapper-3"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[MockFunction]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-28"
                  >
                    <WithStyles(Avatar)
                      className="CharIcon-avatar-1 CharIcon-brown-20"
                    >
                      <Avatar
                        className="CharIcon-avatar-1 CharIcon-brown-20"
                        classes={
                          Object {
                            "colorDefault": "MuiAvatar-colorDefault-33",
                            "img": "MuiAvatar-img-34",
                            "root": "MuiAvatar-root-32",
                          }
                        }
                        component="div"
                      >
                        <div
                          className="MuiAvatar-root-32 MuiAvatar-colorDefault-33 CharIcon-avatar-1 CharIcon-brown-20"
                        >
                          o
                        </div>
                      </Avatar>
                    </WithStyles(Avatar)>
                  </span>
                </button>
              </ButtonBase>
            </WithStyles(ButtonBase)>
          </IconButton>
        </WithStyles(IconButton)>
      </CharIcon>
    </WithStyles(CharIcon)>
  </MockRouter>
</Provider>
`;

exports[`should match snapshot: CharIcon/small 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <MockRouter
    createHref={[Function]}
    location=""
    params={Object {}}
    path=""
    push={[Function]}
    replace={[Function]}
    url=""
  >
    <WithStyles(CharIcon)
      name="ozaki25"
      onClick={[MockFunction]}
      small={true}
    >
      <CharIcon
        classes={
          Object {
            "amber": "CharIcon-amber-17",
            "avatar": "CharIcon-avatar-1",
            "blue": "CharIcon-blue-9",
            "blueGrey": "CharIcon-blueGrey-22",
            "brown": "CharIcon-brown-20",
            "cyan": "CharIcon-cyan-11",
            "deepOrange": "CharIcon-deepOrange-19",
            "deepPurple": "CharIcon-deepPurple-7",
            "green": "CharIcon-green-13",
            "grey": "CharIcon-grey-21",
            "indigo": "CharIcon-indigo-8",
            "lightBlue": "CharIcon-lightBlue-10",
            "lightGreen": "CharIcon-lightGreen-14",
            "lime": "CharIcon-lime-15",
            "orange": "CharIcon-orange-18",
            "pink": "CharIcon-pink-5",
            "purple": "CharIcon-purple-6",
            "red": "CharIcon-red-4",
            "smallAvatar": "CharIcon-smallAvatar-2",
            "teal": "CharIcon-teal-12",
            "wrapper": "CharIcon-wrapper-3",
            "yellow": "CharIcon-yellow-16",
          }
        }
        name="ozaki25"
        onClick={[MockFunction]}
        small={true}
      >
        <WithStyles(IconButton)
          className="CharIcon-wrapper-3"
          disableRipple={true}
          onClick={[MockFunction]}
        >
          <IconButton
            className="CharIcon-wrapper-3"
            classes={
              Object {
                "colorInherit": "MuiIconButton-colorInherit-24",
                "colorPrimary": "MuiIconButton-colorPrimary-25",
                "colorSecondary": "MuiIconButton-colorSecondary-26",
                "disabled": "MuiIconButton-disabled-27",
                "label": "MuiIconButton-label-28",
                "root": "MuiIconButton-root-23",
              }
            }
            color="default"
            disableRipple={true}
            disabled={false}
            onClick={[MockFunction]}
          >
            <WithStyles(ButtonBase)
              centerRipple={true}
              className="MuiIconButton-root-23 CharIcon-wrapper-3"
              disableRipple={true}
              disabled={false}
              focusRipple={true}
              onClick={[MockFunction]}
            >
              <ButtonBase
                centerRipple={true}
                className="MuiIconButton-root-23 CharIcon-wrapper-3"
                classes={
                  Object {
                    "disabled": "MuiButtonBase-disabled-30",
                    "focusVisible": "MuiButtonBase-focusVisible-31",
                    "root": "MuiButtonBase-root-29",
                  }
                }
                component="button"
                disableRipple={true}
                disableTouchRipple={false}
                disabled={false}
                focusRipple={true}
                onClick={[MockFunction]}
                tabIndex="0"
                type="button"
              >
                <button
                  className="MuiButtonBase-root-29 MuiIconButton-root-23 CharIcon-wrapper-3"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[MockFunction]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-28"
                  >
                    <WithStyles(Avatar)
                      className="CharIcon-avatar-1 CharIcon-smallAvatar-2 CharIcon-brown-20"
                    >
                      <Avatar
                        className="CharIcon-avatar-1 CharIcon-smallAvatar-2 CharIcon-brown-20"
                        classes={
                          Object {
                            "colorDefault": "MuiAvatar-colorDefault-33",
                            "img": "MuiAvatar-img-34",
                            "root": "MuiAvatar-root-32",
                          }
                        }
                        component="div"
                      >
                        <div
                          className="MuiAvatar-root-32 MuiAvatar-colorDefault-33 CharIcon-avatar-1 CharIcon-smallAvatar-2 CharIcon-brown-20"
                        >
                          o
                        </div>
                      </Avatar>
                    </WithStyles(Avatar)>
                  </span>
                </button>
              </ButtonBase>
            </WithStyles(ButtonBase)>
          </IconButton>
        </WithStyles(IconButton)>
      </CharIcon>
    </WithStyles(CharIcon)>
  </MockRouter>
</Provider>
`;
